--- a/src/School.System.Domain/School.System.Domain.csproj
+++ b/src/School.System.Domain/School.System.Domain.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Volo.Abp.BlobStoring" Version="9.0.4" />
     <PackageReference Include="Volo.Abp.Emailing" Version="9.0.4" />
     <PackageReference Include="Volo.Abp.Caching" Version="9.0.4" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Domain.Identity" Version="9.0.4" />
