--- a/src/School.System.Web/School.System.Web.csproj
+++ b/src/School.System.Web/School.System.Web.csproj
@@ -45,6 +45,7 @@
     <PackageReference Include="AspNetCore.HealthChecks.UI.InMemory.Storage" Version="9.0.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="2.1.0" />
+    <PackageReference Include="Volo.Abp.BlobStoring" Version="9.0.4" />
   </ItemGroup>
 
   <ItemGroup>
@@ -69,14 +70,11 @@
     <PackageReference Include="Volo.Abp.Account.Web.OpenIddict" Version="9.0.4" />
     <PackageReference Include="Volo.Abp.Identity.Web" Version="9.0.4" />
     <PackageReference Include="Volo.Abp.TenantManagement.Web" Version="9.0.4" />
+    <PackageReference Include="Volo.Abp.BlobStoring.Minio" Version="9.0.4" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Volo.Abp.Studio.Client.AspNetCore" Version="0.9.23" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Pages\Roles\Teachers\" />
   </ItemGroup>
 
 </Project>
