--- a/src/School.System.Web/School.System.Web.csproj
+++ b/src/School.System.Web/School.System.Web.csproj
@@ -77,4 +77,8 @@
     <PackageReference Include="Volo.Abp.Studio.Client.AspNetCore" Version="0.9.23" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\Tasks\StudentTask\" />
+  </ItemGroup>
+
 </Project>
